# human-in-picture-concrete-ml

./: .gitignore  ConvolutionalNeuralNetwork.ipynb  ConvolutionalNeuralNetwork.py  ConvolutionalNeuralNetworkVanilla.ipynb  Makefile  Pipfile  README.md  dataset_utils.py  main.py  pyproject.toml  requirements.txt  run.sh  test.py
models/: HeavyCNN.py  TinyCNN.py
scripts/: benchmark.sh  data_processing.sh  process_results.sh  run.sh  run_multiple.sh  run_multiple_image_size.sh  run_multiple_n_bits.sh  run_multiple_p_error.sh  webapp.sh
src/: ConvolutionalNeuralNetwork.ipynb  ConvolutionalNeuralNetwork.py  ConvolutionalNeuralNetworkVanilla.ipynb  ConvolutionalNeuralNetworkVanilla2.ipynb  DataProcessing.py
src/models/: HeavyCNN.py  TinyCNN.py
src/notebooks/: ConvolutionalNeuralNetworkVanilla.ipynb  ConvolutionalNeuralNetworkVanilla2.ipynb
src/utils/: arguments_utils.py  cnn_utils.py  device_utils.py  fhe_utils.py  graphics_utils.py  results_utils.py  time_utils.py
src/webapp/: .gitignore  README.md  app.py  client_server_interface.py  common.py  filters.py  server.py
src/webapp/filters/hip/deployment/: versions.json
utils/: cnn_utils.py  dataset_utils.py  fhe_utils.py  graphics_utils.py  time_utils.py
