[tool.poetry]
name = "human-in-picture-concrete-ml"
version = "0.1.0"
description = ""
authors = ["rcatalan98 <robertitocatalan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.11"
concrete-ml = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
