[tool.poetry]
name = "human-in-picture-concrete-ml"
version = "0.1.0"
description = "A CNN using Concrete ML to identify if there is a human in a picture."
authors = ["rcatalan98 <robertitocatalan@gmail.com>", "glpecile <gpecile@itba.edu.ar>", "juarce <juarce@itba.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.11"
concrete-ml = "^1.2.1"
pillow = "^10.0.1"
matplotlib = "^3.8.0"
kaggle = "^1.5.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
